manifests/app/dreamkast/overlays/staging/main/deployment-fifo-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dreamkast
    tier: dreamkast-fifo-worker
  name: dreamkast-fifo-worker
spec:
  selector:
    matchLabels:
      app: dreamkast
      tier: dreamkast-fifo-worker
  template:
    metadata:
      labels:
        app: dreamkast
        tier: dreamkast-fifo-worker
    spec:
      containers:
        - name: dreamkast
          image: dreamkast-ecs
          imagePullPolicy: Always
          args:
            - exec
            - rake
            - aws_sqs:fifo_job
          command:
            - bundle
