manifests/app/dreamkast/overlays/staging/main/ingress.yaml
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: dreamkast
  labels:
    app: dreamkast
spec:
  virtualhost:
    fqdn: staging.dev.cloudnativedays.jp
    tls:
      secretName: cert-manager/wildcard-dev-cloudnativedays-jp
  routes:
    - conditions:
      - prefix: /
      services:
      - name: dreamkast
        port: 80
      cookieRewritePolicies:
      - name: _session_id
        secure: true
    - conditions:
      - prefix: /cable
      enableWebsockets: true
      services:
      - name: dreamkast
        port: 80
      loadBalancerPolicy:
        strategy: Cookie
      cookieRewritePolicies:
      - name: _session_id
        secure: true
    - conditions:
      - prefix: /cndt2023/ui
      services:
      - name: dreamkast-ui
        port: 3001
      cookieRewritePolicies:
      - name: _session_id
        secure: true
    - conditions:
      - prefix: /_next
      services:
      - name: dreamkast-ui
        port: 3001
      cookieRewritePolicies:
      - name: _session_id
        secure: true

---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: dreamkast-weaver
  labels:
    app: dreamkast
    tier: dreamkast-weaver
spec:
  virtualhost:
    # TODO: replace api.dev.cloudnativedays.jp
    fqdn: dkw.dev.cloudnativedays.jp
    tls:
      secretName: cert-manager/wildcard-dev-cloudnativedays-jp
  routes:
    - conditions:
      - prefix: /
      services:
      - name: dreamkast-weaver
        port: 8080
